# BitcoinReal

./: CONTRIBUTING.md  COPYING  INSTALL  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac  libbtcrconsensus.pc.in
autom4te.cache/: output.0  requests  traces.0  traces.1  traces.2
btcr-docs/: protocol-documentation.md
build-aux/m4/: btcr_find_bdb48.m4  btcr_qt.m4  btcr_subdir_to_include.m4
contrib/: README.md  btcr-qt.pro  btcrd.bash-completion  qt_translations.py  tidy_datadir.sh
contrib/debian/: README.md  btcr-qt.desktop  btcr-qt.install  btcr-qt.lintian-overrides  btcr-qt.protocol  btcr-tx.install  btcrd.bash-completion  btcrd.examples  btcrd.install  btcrd.lintian-overrides  btcrd.manpages  changelog  control  copyright  rules  watch
contrib/devtools/: README.md  fix-copyright-headers.py  github-merge.sh  symbol-check.py  update-translations.py
contrib/gitian-descriptors/: README.md  gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-rpi2.yml  gitian-win-signer.yml  gitian-win.yml
contrib/init/: README.md  (+6 more)
depends/: Makefile  README.md  config.site.in  description.md
doc/: Doxyfile  README.md  README_windows.txt  REST-interface.md  bips.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  developer-notes.md  dnsseed-policy.md  files.md  gitian-building.md  guide-startmany.md  init.md  instantsend.md  keepass.md  masternode-budget.md  masternode_conf.md  multiwallet-qt.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  travis-ci.txt  unit-tests.md  zmq.md
qa/: README.md
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.in  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrdb.h  addressindex.h  addrman.h  alert.cpp  alert.h  amount.cpp  amount.h  arith_uint256.h  base58.cpp  base58.h  bip39.h  bip39_english.h  bloom.h  btcr-cli-res.rc  btcr-cli.cpp  btcr-tx-res.rc  btcr-tx.cpp  btcrd-res.rc  btcrd.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.h  compat.h  compressor.h  core_io.h  (+87 more)
src/a/res/css/: drkblue.css  light-hires-retro.css
src/bench/: .gitignore  bench.h
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  sanity.h  strnlen.cpp
src/config/: btcr-config.h.in
src/consensus/: consensus.h  merkle.cpp  merkle.h  params.h  validation.h
src/crypto/: common.h  hmac_sha256.h  hmac_sha512.h  ripemd160.h  sha1.h  sha512.h
src/drafted/: governance-categories.h  governance-classes.h  governance-keys.cpp  governance-keys.h  governance-types.cpp  governance-types.h
src/policy/: fees.cpp  fees.h  policy.h  rbf.h
src/primitives/: block.h  transaction.h
src/qt/: addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.h  btcr-qt.files  btcr.cpp  btcr.qrc  btcr_locale.qrc  btcraddressvalidator.cpp  btcraddressvalidator.h  btcramountfield.cpp  btcramountfield.h  btcrgui.cpp  btcrgui.h  btcrstrings.cpp  btcrunits.cpp  btcrunits.h  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.h  csvmodelwriter.h  darksendconfig.cpp  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macnotificationhandler.h  macnotificationhandler.mm  masternodelist.cpp  modaloverlay.h  networkstyle.cpp  networkstyle.h  (+58 more)
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  darksendconfig.ui  debugwindow.ui  helpmessagedialog.ui  intro.ui  modaloverlay.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  settingspage.ui  signverifymessagedialog.ui  toolspage.ui
src/qt/locale/: btcr_bg.ts  btcr_de.ts  btcr_en.ts  btcr_es.ts  btcr_fi.ts  btcr_fr.ts  btcr_it.ts  btcr_ja.ts  btcr_pl.ts  btcr_pt.ts  btcr_ru.ts  btcr_sk.ts  btcr_sv.ts  btcr_vi.ts  btcr_zh_CN.ts  btcr_zh_TW.ts
src/qt/res/: btcr-qt-res.rc
src/qt/res/a/__MACOSX/res/css/: crownium.css  light-retro.css  light.css
src/qt/res/bb/: btcr-qt-res.rc
src/qt/res/bb/css/: light-hires.css
src/qt/res/css/: light
src/qt/test/: Makefile  compattests.cpp  compattests.h  paymentrequestdata.h  paymentservertests.cpp  paymentservertests.h  test_main.cpp  uritests.cpp  uritests.h
src/rpc/: blockchain.cpp  client.h  governance.cpp  masternode.cpp  mining.cpp  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  server.cpp  server.h
src/script/: btcrconsensus.cpp  btcrconsensus.h  interpreter.cpp  interpreter.h  script.h  script_error.h  sigcache.h  sign.h  standard.cpp  standard.h
src/support/: cleanse.h  pagelocker.cpp  pagelocker.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: DoS_tests.cpp  Makefile  README.md  accounting_tests.cpp  addrman_tests.cpp  alert_tests.cpp  allocator_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bip32_tests.cpp  bip39_tests.cpp  bloom_tests.cpp  bswap_tests.cpp  btcr-util-test.py  cachemap_tests.cpp  cachemultimap_tests.cpp  checkblock_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  dbwrapper_tests.cpp  getarg_tests.cpp  governance_validators_tests.cpp  hash_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  miner_tests.cpp  multisig_tests.cpp  net_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  ratecheck_tests.cpp  (+24 more)
src/test/data/: README.md  btcr-util-test.json  proposals-invalid.json  proposals-valid.json
src/univalue/lib/: univalue_escapes.h
src/wallet/: crypter.h  db.h  rpcdump.cpp  rpcwallet.cpp  wallet.cpp  wallet.h  wallet_ismine.h  walletdb.cpp  walletdb.h
src/wallet/test/: wallet_tests.cpp
src/zmq/: zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.h  zmqpublishnotifier.h
(+110 files in other folders)
